[project]
name = "wu-xian-shi-xun-mylib"
version = "2025.7.4.1"
description = "custom browser control lib"
readme = "README.md"
authors = [
    { name = "sodacris", email = "wjxa20152015@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "cryptography>=45.0.4",
    "fake-useragent>=2.0.0",
    "selenium>=4.27.1",
    "setuptools>=75.3.2",
]

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["wu_xian_shi_xun_mylib"]
exclude = ["__pycache__", "*.pyc", "*.exe", "*.exe~", "*.syso"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["wu_xian_shi_xun_mylib"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]
