[project]
name = "wu-xian-shi-xun-mylib"
version = "2025.8.14.0"
description = "custom browser control lib"
readme = "README.md"
authors = [
    { name = "sodacris", email = "wjxa20152015@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "cryptography",
    "selenium",
]

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["wu_xian_shi_xun_mylib"]
exclude = ["__pycache__", "*.pyc", "*.exe", "*.exe~", "*.syso"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["wu_xian_shi_xun_mylib"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]
